gitops/networking/cilium/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    cert-manager.io/duration: 720h
    cert-manager.io/renew-before: 72h
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.1.1
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.home.lab"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-home-lab-tls
