gitops/networking/cilium/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
  hostnames:
    - hubble.apps.internal
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
